# calculator

./: CMakeLists.txt  README.md  org.kde.calculator.desktop  org.kde.calculator.json
.flatpak-builder/ccache/0/: stats
.flatpak-builder/ccache/0/1/: 6fbf89c2b9e485323e880a78c8268e-15147.manifest  eee80e0acddeef073e0db0d0d30f53-7762.manifest
.flatpak-builder/ccache/0/2/: 285e53e841331883ef4c0bf3ec65ec-10529.manifest  f073450446edb98e6eb11e80aecf31-10376.manifest
.flatpak-builder/ccache/0/3/: af54f79080419dd0a50c58e7b6529f-2711.manifest
.flatpak-builder/ccache/0/4/: a1a844757842a06122991c11544f03-2705.manifest
.flatpak-builder/ccache/0/6/: 34dfb13221e26f411277650da38b40-11079.manifest  (+1 more)
.flatpak-builder/ccache/1/: stats
.flatpak-builder/ccache/2/: stats
.flatpak-builder/ccache/3/: stats
.flatpak-builder/ccache/4/: stats
.flatpak-builder/ccache/5/: stats
.flatpak-builder/ccache/6/: stats
.flatpak-builder/ccache/7/: stats
.flatpak-builder/ccache/8/: stats
.flatpak-builder/ccache/9/: stats
.flatpak-builder/ccache/a/: stats
.flatpak-builder/ccache/b/: stats
.flatpak-builder/ccache/c/: stats
.flatpak-builder/ccache/d/: stats
.flatpak-builder/ccache/e/: stats
.flatpak-builder/ccache/f/: stats
.flatpak-builder/checksums/: x86_64-org.kde.calculator.json  x86_64-org.kde.hellokirigami.json
src/: CMakeLists.txt  ComputeExpression.cpp  ComputeExpression.h  main.cpp  resources.qrc
src/contents/ui/: BasicCalculatorPage.qml  CalcButton.qml  ProgrammerCalculatorPage.qml  ScientificCalculatorPage.qml  main.qml
(+204 files in other folders)
